fix the update method